[gd_scene load_steps=11 format=3 uid="uid://dsvgm80bl4b00"]

[ext_resource type="Texture2D" uid="uid://bkprxqyvov2kj" path="res://Assets/player/player.png" id="1_0ndrh"]
[ext_resource type="Script" path="res://Scenes/Characters/Player/player.gd" id="1_o33vf"]
[ext_resource type="PackedScene" uid="uid://chwoyx0pfkm22" path="res://Scenes/Characters/Player/player_blaster.tscn" id="2_nhvfm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0wv76"]
size = Vector2(8, 14)

[sub_resource type="Animation" id="Animation_48vqd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_vb3pt"]
resource_name = "fall"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_0yykm"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_7nvaj"]
resource_name = "jump"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}

[sub_resource type="Animation" id="Animation_khxsx"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9, 4]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"create_dust_effect"
}, {
"args": [],
"method": &"create_dust_effect"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2vqv6"]
_data = {
"RESET": SubResource("Animation_48vqd"),
"fall": SubResource("Animation_vb3pt"),
"idle": SubResource("Animation_0yykm"),
"jump": SubResource("Animation_7nvaj"),
"run": SubResource("Animation_khxsx")
}

[node name="Player" type="CharacterBody2D"]
floor_snap_length = 2.0
script = ExtResource("1_o33vf")

[node name="PlayerBlaster" parent="." instance=ExtResource("2_nhvfm")]
show_behind_parent = true
position = Vector2(3, -8)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -12)
texture = ExtResource("1_0ndrh")
hframes = 12

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Sprite2D"]
position = Vector2(3, 4)
remote_path = NodePath("../../PlayerBlaster")
update_rotation = false
update_scale = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_0wv76")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2vqv6")
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -7)
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_top_margin = 0.1
drag_right_margin = 0.1

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.175
one_shot = true
